--- a/generator/build.xml
+++ b/generator/build.xml
@@ -65,9 +65,9 @@
 	</target>
 	<target name="clean" description="Cleaning">
 		<delete dir="${dist.dir}"/>
-		<delete dir="build"/>
+		<delete dir="${build.dir}"/>
 		<delete dir="doc"/>
-		<delete dir="release"/>
+		<delete dir="${release.dir}"/>
 	</target>
 	<target name="compile" description="Compilation" depends="prepare">
         <javac srcdir="src/java" destdir="${build.dir}/classes" debug="true" optimize="${opt.javac.optimize}">
@@ -104,7 +104,7 @@
 		</chmod>
 	</target>
 	<target name="release" description="create binary release" depends="dist">
-		<mkdir dir="release"/>
+		<mkdir dir="${release.dir}"/>
 		<tar destfile="${release.file}" compression="gzip">
 			<tarfileset dir="${dist.dir}" prefix="${release.prefix}" mode="755">
 				<include name="bin/*"/>
@@ -115,7 +115,7 @@
 		</tar>
 	</target>
 	<target name="release-src" description="create source release" depends="dist">
-		<mkdir dir="release"/>
+		<mkdir dir="${release.dir}"/>
 		<tar destfile="${release.src.file}" compression="gzip">
 			<tarfileset dir="." prefix="${ant.project.name}-${project.version}">
 				<include name="lib/*"/>
