--- a/generator/Makefile.am
+++ b/generator/Makefile.am
@@ -28,12 +28,12 @@ clean-local:
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(datadir)/xmlbeansxx
 	$(mkinstalldirs) $(DESTDIR)$(bindir)
-	cp -a dist/* ${DESTDIR}${datadir}/xmlbeansxx
+	cp -r dist/* ${DESTDIR}${datadir}/xmlbeansxx
 	ln -fs ${datadir}/xmlbeansxx/bin/xmlbeansxx-gen ${DESTDIR}${bindir}/xmlbeansxx-gen
 	ln -fs ${datadir}/xmlbeansxx/bin/scompxx ${DESTDIR}${bindir}/scompxx
 	
 dist-hook:
-	for file in `find -regex '\./\(src\|lib\|build\.xml\).*' -not -regex '.*/\..*'`; do \
+	for file in `find . -regex '\./\(src\|lib\|build\.xml\).*' -not -regex '.*/\..*'`; do \
 		if [ -d $$file ]; then \
 			mkdir $(distdir)/$$file; \
 		else \
