test opcji -Ddownload jest zaszyty na stale w Makefile.am

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -21,7 +21,7 @@ SCHEMAS_H = c.h entities.h pawel.h
 BUILT_SOURCES = $(SCHEMAS_CPP) $(SCHEMAS_H)
 
 $(SCHEMAS_CPP) $(SCHEMAS_H): $(SCHEMAS_XSD) c.xh
-	${top_builddir}/generator/dist/bin/xmlbeansxx-gen $(SCHEMAS_XSD)
+	${top_builddir}/generator/dist/bin/xmlbeansxx-gen -Ddownload $(SCHEMAS_XSD)
 
 TESTS=BeansTest GenTest EntitiesTest ArrayTest EnumTest
 check_PROGRAMS = $(TESTS)
