--- a/generator/build.xml
+++ b/generator/build.xml
@@ -97,10 +97,11 @@
         <copy file="src/conf/xmlvalidator" todir="${dist.dir}/bin"/>
         <copy file="src/conf/scompxx" todir="${dist.dir}/bin"/>
         <copy file="src/conf/xmlbeansxx-gen" todir="${dist.dir}/bin"/>
+        <copy file="src/conf/xmlbeansxx-split" todir="${dist.dir}/bin"/>
         <copy file="src/conf/xmlbeansxx-genbuiltin" todir="${dist.dir}/bin"/>
         <copy file="src/conf/acx_pthread.m4" todir="${dist.dir}/bin"/>
 		<chmod perm="a+x" type="file" failonerror="false">
-            <fileset dir="${dist.dir}/bin" includes="xmlvalidator xmlbeansxx-genbuiltin xmlbeansxx-gen scompxx"/>
+            <fileset dir="${dist.dir}/bin" includes="xmlvalidator xmlbeansxx-genbuiltin xmlbeansxx-gen scompxx xmlbeansxx-split"/>
 		</chmod>
 	</target>
 	<target name="release" description="create binary release" depends="dist">
