--- a/Makefile.am
+++ b/Makefile.am
@@ -14,6 +14,6 @@
 
 
 ACLOCAL = aclocal -I m4
-EXTRA_DIST = bootstrap m4/acx_pthread.m4
+EXTRA_DIST = bootstrap m4/acx_pthread.m4 m4/BB_ENABLE_DOXYGEN.m4
 
-SUBDIRS = generator src examples tests
+SUBDIRS = generator src examples tests docs
