--- a/src/xmlbeansxx/Makefile.am
+++ b/src/xmlbeansxx/Makefile.am
@@ -105,10 +105,10 @@ nodist_libxmlbeansxxinclude_HEADERS = \
 	XmlTypesGen.h\
 	xml-fragment.h
 
-XmlTypesGen.h XmlTypesGen.cpp: ${top_srcdir}/generator/dist/bin/xmlbeansxx-genbuiltin
+XmlTypesGen.h XmlTypesGen.cpp: ${top_builddir}/generator/dist/bin/xmlbeansxx-genbuiltin
 	${top_builddir}/generator/dist/bin/xmlbeansxx-genbuiltin ${srcdir}/
 
-xml-fragment.h xml-fragment.cpp: ${top_srcdir}/generator/dist/bin/xmlbeansxx-gen xml-fragment.xsd
+xml-fragment.h xml-fragment.cpp: ${top_builddir}/generator/dist/bin/xmlbeansxx-gen xml-fragment.xsd
 	${top_builddir}/generator/dist/bin/xmlbeansxx-gen ${srcdir}/xml-fragment.xsd
 
 MOSTLYCLEANFILES=XmlTypesGen.h XmlTypesGen.cpp xml-fragment.h xml-fragment.cpp
