--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -22,14 +22,15 @@ BUILT_SOURCES = $(SCHEMAS_CPP) $(SCHEMAS_H)
 $(SCHEMAS_CPP) $(SCHEMAS_H): $(SCHEMAS_XSD) c.xh
 	${top_builddir}/generator/target/xmlbeansxx-gen/bin/xmlbeansxx-gen -Ddownload $(SCHEMAS_XSD)
 
-TESTS=BeansTest GenTest EntitiesTest ArrayTest EnumTest
+TESTS=BeansTest GenTest EntitiesTest ArrayTest EnumTest XPathTest
 check_PROGRAMS = $(TESTS)
 BeansTest_SOURCES=TestApp.cpp BeansTest.cpp BeansTest.h
 ArrayTest_SOURCES=TestApp.cpp ArrayTest.cpp ArrayTest.h c.cpp
 GenTest_SOURCES=TestApp.cpp GenTest.cpp GenTest.h 
 EnumTest_SOURCES=TestApp.cpp EnumTest.cpp EnumTest.h pawel.h pawel.cpp
+XPathTest_SOURCES=TestApp.cpp XPathTest.cpp XPathTest.h pawel.h pawel.cpp
 EntitiesTest_SOURCES=TestApp.cpp EntitiesTest.cpp EntitiesTest.h entities.h entities.cpp
-nodist_GenTest_SOURCES = c.h c.cpp
+nodist_GenTest_SOURCES = c.h c.cpp pawel.h pawel.cpp
 
 noinst_PROGRAMS = mem01 mem02 mem03
 mem01_SOURCES = mem01.cpp
