--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -24,6 +24,9 @@
   
   <build>
     <defaultGoal>compile</defaultGoal>
+    <sourceDirectory>${base}/src/main/java</sourceDirectory>
+    <scriptSourceDirectory>${base}/src/main/scripts</scriptSourceDirectory>
+    <testSourceDirectory>${base}/src/test/java</testSourceDirectory>
 
     <plugins>
       <plugin>
@@ -58,7 +61,7 @@
           
           <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
-	    <version>2.1</version>
+	        <version>2.1</version>
             <executions>
               <execution>
                 <phase>package</phase>
@@ -66,7 +69,7 @@
                   <goal>directory-inline</goal>
                 </goals>
                 <configuration>
-                  <descriptor>${basedir}/src/main/assemblies/release.xml</descriptor>
+                  <descriptor>${base}/src/main/assemblies/release.xml</descriptor>
                   <appendAssemblyId>false</appendAssemblyId>
                   <finalName>xmlbeansxx-gen</finalName>
                 </configuration>
