--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -19,7 +19,7 @@ DATA_FILES = $(EXTRA_DIST)
 
 BUILT_SOURCES = $(SCHEMAS_CPP) $(SCHEMAS_H)
 
-$(SCHEMAS_CPP) $(SCHEMAS_H): $(SCHEMAS_XSD) c.xh
+$(SCHEMAS_CPP) $(SCHEMAS_H): $(SCHEMAS_XSD) c.xh ${top_builddir}/generator/stamp-build
 	${top_builddir}/generator/target/xmlbeansxx-gen/bin/xmlbeansxx-gen -Ddownload $(SCHEMAS_XSD)
 
 TESTS=BeansTest GenTest EntitiesTest ArrayTest EnumTest XPathTest
