--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -24,13 +24,23 @@ $(SCHEMAS_CPP) $(SCHEMAS_H): $(SCHEMAS_XSD) c.xh ${top_builddir}/generator/stamp
 
 TESTS=BeansTest GenTest EntitiesTest ArrayTest EnumTest XPathTest
 check_PROGRAMS = $(TESTS)
+
 BeansTest_SOURCES=TestApp.cpp BeansTest.cpp BeansTest.h
-ArrayTest_SOURCES=TestApp.cpp ArrayTest.cpp ArrayTest.h c.cpp
+
+ArrayTest_SOURCES=TestApp.cpp ArrayTest.cpp ArrayTest.h
+nodist_ArrayTest_SOURCES = c.cpp
+
 GenTest_SOURCES=TestApp.cpp GenTest.cpp GenTest.h 
-EnumTest_SOURCES=TestApp.cpp EnumTest.cpp EnumTest.h pawel.h pawel.cpp
-XPathTest_SOURCES=TestApp.cpp XPathTest.cpp XPathTest.h pawel.h pawel.cpp
-EntitiesTest_SOURCES=TestApp.cpp EntitiesTest.cpp EntitiesTest.h entities.h entities.cpp
 nodist_GenTest_SOURCES = c.h c.cpp pawel.h pawel.cpp
+
+EnumTest_SOURCES=TestApp.cpp EnumTest.cpp EnumTest.h
+nodist_EnumTest_SOURCES=pawel.h pawel.cpp
+
+XPathTest_SOURCES=TestApp.cpp XPathTest.cpp XPathTest.h
+nodist_XPathTest_SOURCES=pawel.h pawel.cpp
+
+EntitiesTest_SOURCES=TestApp.cpp EntitiesTest.cpp EntitiesTest.h
+nodist_EntitiesTest_SOURCES= entities.h entities.cpp
 
 noinst_PROGRAMS = mem01 mem02 mem03
 mem01_SOURCES = mem01.cpp
