--- a/Makefile.svn
+++ b/Makefile.svn
@@ -11,18 +11,20 @@ configure:
 	make -f Makefile.svn configure-stamp
 
 configure-stamp: update-stamp
-	./bootstrap && ./configure --prefix=${EMCI_HOME} --with-xmlbeansppgen=${CURDIR}/../xmlbeans++gen/dist
+	./bootstrap && ./configure
 	touch configure-stamp
 
 build: configure
 	make -j4
 	touch build-stamp
-		
-install: configure
-	make -j4 install
-	touch install-stamp
+
+#install: configure
+#	make -j4 install
+#	touch install-stamp
 
 tag: build
-	TAG=`grep AC_INIT configure.ac | sed -e "s/.*(.*, *\([^) ]*\) *)/\1/"`;\
-	TAG_URL=`svn info | grep URL | sed -e "s/URL: //;s/trunk/tags/"`-$$TAG;\
+	TAG=`grep AC_INIT configure.ac | sed -e 's/^[^,]*, *\([^, ]*\).*$$/\1/'`;\
+	echo $$TAG; \
+	TAG_URL=`svn info | grep URL | sed -e "s/URL: //;s/trunk/tags/"`/$$TAG;\
+	echo $$TAG_URL; \
 	if ! svn ls $$TAG_URL 2>&1 > /dev/null; then svn cp . $$TAG_URL -m "Tagged version $$TAG"; else echo "Tag already exists"; fi
