--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -61,10 +61,10 @@ MOSTLYCLEANFILES = $(SCHEMAS_CPP) $(SCHEMAS_H)
 
 
 copy_data: 
-	if [ ${builddir} ]; then if [ 'x${srcdir}' != 'x${builddir}' ]; then for i in $(DATA_FILES); do   cp ${srcdir}/$$i ${builddir} ; done ; true ;  fi fi
+	if [ "x`readlink -f ${srcdir}`" != "x`readlink -f .`" ]; then for i in $(DATA_FILES); do   cp ${srcdir}/$$i  . ; done ; true ;  fi 
 
 rm_data: 
-	if [ ${builddir} ]; then if [ 'x${srcdir}' != 'x${builddir}' ]; then  rm -f $(DATA_FILES) xmldsig-core-schema.h xmldsig-core-schema.cpp  ; true ;  fi fi
+	if [ "x`readlink -f ${srcdir}`" != "x`readlink -f .`"  ]; then  rm -f $(DATA_FILES) xmldsig-core-schema.h xmldsig-core-schema.cpp  ; true ;  fi
 
 check: copy_data
 
