--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -6,8 +6,13 @@
 #	touch stamp-build
 
 
-ADD_CUSTOM_TARGET( generator
-	mvn -Dbase=. -Prelease package 
+ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/pom.xml
+	COMMAND ${CMAKE_COMMAND} copy ${CMAKE_CURRENT_SOURCE_DIR}/pom.xml .
+	)
+
+ADD_CUSTOM_TARGET( generator 
+	mvn -Dbase=${CMAKE_CURRENT_SOURCE_DIR} -Prelease package
+	DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/pom.xml
 	)
 	
 add_dependencies (generator xmlbeansxx)
