--- a/generator/CMakeLists.txt
+++ b/generator/CMakeLists.txt
@@ -7,16 +7,11 @@
 
 
 ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/pom.xml
-	COMMAND ${CMAKE_COMMAND} copy ${CMAKE_CURRENT_SOURCE_DIR}/pom.xml .
+	COMMAND ${CMAKE_COMMAND} copy ${CMAKE_CURRENT_SOURCE_DIR}/pom.xml ${CMAKE_CURRENT_BINARY_DIR}/
 	)
 
 ADD_CUSTOM_TARGET( generator 
 	mvn -Dbase=${CMAKE_CURRENT_SOURCE_DIR} -Prelease package
 	DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/pom.xml
 	)
-	
-add_dependencies (generator xmlbeansxx)
 
-
-SET(xmlbeansxx-genbuiltin ./bolek)
-SET(xmlbeansxx-gen ./bolek2)
